# Pi-Pico-MacroPad

./: CMakeLists.txt  README.md
src/: MacroPad.cpp
src/lib/Encoder/: CMakeLists.txt  Encoder.cpp  Encoder.h
src/lib/WS2812/: CMakeLists.txt  WS2812.cpp  WS2812.h  WS2812.pio.h
src/lib/tinyusb/: tusb_config.h
